# easylora

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
docs/: adapters.md  cli.md  configuration.md  index.md  model-support.md  quickstart.md  release.md  troubleshooting.md
easylora/: __init__.py  config.py  exceptions.py  logging.py
easylora/autopilot/: __init__.py  api.py  dataset_analysis.py  hardware.py  heuristics.py  model_analysis.py  planner.py  presets.py
easylora/cli/: __init__.py  autopilot_cmd.py  doctor_cmd.py  eval_cmd.py  init_cmd.py  inspect_cmd.py  main.py  train_cmd.py
easylora/data/: __init__.py  collator.py  formatting.py  loaders.py
easylora/eval/: __init__.py  generate.py  perplexity.py
easylora/lora/: __init__.py  adapter.py  merge.py  targets.py  targets_registry.yaml
easylora/train/: __init__.py  callbacks.py  loop.py  trainer.py
easylora/utils/: __init__.py  hf.py  io.py  model_card.py  seed.py
examples/: sft_lora.yaml
notebooks/: quickstart_colab.ipynb
tests/: test_adapter_io.py  test_autopilot_dataset_analysis.py  test_autopilot_hardware.py  test_autopilot_planner_api.py  test_config.py  test_formatting.py  test_sharded_train_flags.py  test_smoke_toy_train.py  test_targets.py
